--- a/package.json
+++ b/package.json
@@ -36,15 +36,11 @@
     "test": "vitest run"
   },
   "dependencies": {
-    "@nuxt/kit": "3.9.1",
-    "critters": "0.0.20",
-    "pathe": "1.1.2",
-    "ufo": "^1.3.2"
+    "@nuxt/kit": "3.9.1"
   },
   "devDependencies": {
     "@nuxt/module-builder": "0.5.5",
     "@nuxt/test-utils": "3.9.0",
-    "@nuxtjs/critters": "link:./",
     "@nuxtjs/eslint-config-typescript": "12.1.0",
     "@vitest/coverage-v8": "1.2.2",
     "bumpp": "9.3.0",
@@ -53,11 +49,10 @@
     "husky": "8.0.3",
     "lint-staged": "15.2.2",
     "nuxt": "3.9.1",
+    "typescript": "^5.3.3",
     "vitest": "1.2.2"
   },
   "resolutions": {
-    "@nuxt/schema": "3.9.1",
-    "@nuxtjs/critters": "link:./"
-  },
-  "packageManager": "pnpm@8.14.1"
+    "@nuxt/schema": "3.9.1"
+  }
 }
