--- a/package.json
+++ b/package.json
@@ -1,14 +1,14 @@
 {
-  "name": "@nuxtjs/critters",
+  "name": "@wellcare/nuxt3-module-starter",
   "version": "0.6.0",
-  "description": "Critical CSS for Nuxt",
+  "description": "starter",
   "keywords": [
-    "performance",
+    "wellcare",
     "nuxt",
     "module",
     "nuxt-module"
   ],
-  "repository": "nuxt-modules/critters",
+  "repository": "wellcare/nuxt3-module-starter",
   "license": "MIT",
   "type": "module",
   "exports": {
@@ -31,8 +31,6 @@
     "lint:all": "pnpm lint .",
     "prepack": "nuxt-module-build build",
     "prepare": "husky install",
-    "prepublishOnly": "pnpm lint && pnpm test",
-    "release": "bumpp && pnpm publish",
     "test": "vitest run"
   },
   "dependencies": {
@@ -40,19 +38,17 @@
   },
   "devDependencies": {
     "@nuxt/module-builder": "0.5.5",
-    "@nuxt/test-utils": "3.9.0",
+    "@nuxt/test-utils": "3.11.0",
     "@nuxtjs/eslint-config-typescript": "12.1.0",
     "@vitest/coverage-v8": "1.2.2",
-    "bumpp": "9.3.0",
     "eslint": "8.56.0",
     "eslint-config-prettier": "9.1.0",
-    "husky": "8.0.3",
+    "husky": "9.0.1",
     "lint-staged": "15.2.2",
-    "nuxt": "3.9.1",
-    "typescript": "^5.3.3",
-    "vitest": "1.2.2"
+    "nuxt": "3.10.2",
+    "vitest": "1.3.0"
   },
   "resolutions": {
-    "@nuxt/schema": "3.9.1"
+    "@nuxt/schema": "3.10.2"
   }
 }
